fixing alignment for skills container for smaller devices

--- a/style/about.css
+++ b/style/about.css
@@ -539,8 +539,11 @@ body {
         width: 25%;
         height: auto;
         text-align: center;
+        position: relative;
         font-size: 20px;
         margin-top: 12%;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 @media screen and (min-width: 481px) {
